# ferrings

./: .gitignore  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  index.d.mts  index.d.ts  index.js  index.mjs  native.d.mts  native.d.ts  native.js  native.mjs  package-lock.json  package.json  tcp-transport.d.mts  tcp-transport.d.ts  tcp-transport.js  tsconfig.types.json  zcrx-smoke.d.mts  zcrx-smoke.d.ts  zcrx-smoke.js
.github/: actionlint.yaml  dependabot.yml  pull_request_template.md
benchmark/: compare.js  first-slice.js  high-concurrency.js  quick-benchmark.js  quick-proof.js  syscalls.js  tcp-echo.js
docs/: production.md
examples/: http-fixed.js  tcp-echo.js
scripts/: check-github-repository.js  check-main-health.js  check-native-packages.js  check-npm-names.js  check-package-metadata.js  check-published.js  check-registry-install.js  check-release-publication-state.js  check-release-ready.js  check-release-repository.js  check-secrets.js  check-workflows.js  configure-release-repository.js  copy-native-package-assets.js  install-cargo-audit.js  install-cargo-zigbuild.js  install-zig.js  node-runtime.js  prepublish.js  publish-npm-packages.js
src/: lib.rs  uring.rs
test/: check-secrets-state.js  cli-smoke.js  concurrency-regression.js  connection-idle-timeout.js  connection-limit.js  first-slice-benchmark.js  http-registered-send-buffer.js  idle-shutdown.js  install-cargo-audit-state.js  install-cargo-zigbuild-state.js  install-zig-state.js  listen-backlog.js  recv-bundle.js  (+44 more)
(+11 files in other folders)
